# mulNICtl

./: .gitignore  .gitmodules  .test.py  Cargo.toml  README.md  config_all.py  cross-compile.sh  install.py  manifest.json  mulNICtl.py  requirements.txt  run_exp.py  warmup.py
__useless__/: install.py  manifest.json  mulNICtl.py  sync_all.py  warmup.py
__useless__/tools/: file_tx.py  get_channel.py  ip_extract.py
__useless__/util/: qos.py  solver.py  stream.py
config/: graph.txt
scripts/: exp_plot.py  line_infer.py  test1.csv
solver/: Cargo.toml
solver/src/: lib.rs  type.rs
solver/src/api/: ipc.rs
solver/src/cores/: back_switch_solver.rs  channel_balancer.rs  checker.rs  degration_checker.rs  file_restrict.rs  forward_switch_solver.rs  green_solver.rs  mod.rs  prediction.rs  rtt_balance.rs
solver/src/tests/: mod.rs  test_ipc.rs  test_prediction.rs
solver/src/types/: action.rs  mod.rs  parameter.rs  paramter.rs  qos.rs  state.rs  static_value.rs
src/: data.rs  ipc.rs  lib.rs
tools/: create_STA.py  create_data.py  get_channel.py  ip_extract.py  read_graph.py  read_mcs.py  read_rtt.py
util/: constHead.py  ctl.py  header.py  ifSense.py  logger.py  predictor.py  qos.py  solver.py  stream.py  trans_graph.py
util/api/: ipc.py
util/ipc/: __init__.py  ctl.py
