[package]
name = "mulnictl"
version = "0.1.0"
edition = "2021"

[lib]
name = "mulnictl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21" }
ndk = { version = "0.9", features = ["api-level-26"] }
ndk-sys = { version = "0.6" }
