[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
pyo3 = { version = "0.15", features = ["extension-module"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies]
maturin = "0.12"

[lib]
crate-type = ["cdylib"]

